--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,19 @@
 plugins {
+	id 'idea'
 	id 'java'
-	id 'org.springframework.boot' version '3.4.5'
+	id 'org.springframework.boot' version '3.4.3'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.algaworks.algasensors'
 version = '0.0.1-SNAPSHOT'
+
+idea {
+	module {
+		downloadJavadoc = true
+		downloadSources = true
+	}
+}
 
 java {
 	toolchain {
